<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="275dp" >

    <NumberPicker
        android:id="@+id/minPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/setDurationBtn"
        android:layout_alignTop="@+id/hoursPicker" />

    <NumberPicker
        android:id="@+id/hoursPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/cancelDurationBtn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/setDurationBtn"
        android:layout_marginStart="20dp"
        android:text="@string/cancel_string" />

    <Button
        android:id="@+id/setDurationBtn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="214dp"
        android:text="@string/set_string" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="131dp"
        android:layout_marginTop="96dp"
        android:text="@string/h_string"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView"
        android:layout_marginEnd="39dp"
        android:text="@string/m_string"
        android:textSize="20sp" />

</RelativeLayout>