<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.InfoFragment">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:textSize="26sp"
        android:textStyle="italic|bold"
        android:textAlignment="center"
        android:text="Info" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/info1_str" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginTop="349dp"
        android:src="@drawable/baseline_playlist_add_24" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginTop="386dp"
        android:src="@drawable/baseline_date_range_24" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="75dp"
        android:textSize="18sp"
        android:text="@string/add_a_new_task_str" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignStart="@+id/textView10"
        android:textSize="18sp"
        android:text="@string/open_tasks_from_selected_day_str" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:text="@string/info2_str" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:text="Design and create by VBlago Ltd." />
</RelativeLayout>